little layout issue + remove a notice.
--HG--
extra : convert_revision : svn%3A2597059e-4560-0410-9562-ba342e98936d/trunk%40505

--- a/themes/default/css/layout.css
+++ b/themes/default/css/layout.css
@@ -59,6 +59,9 @@ h1#branding {
 	margin-bottom:0;
 }
 
+h1 a:hover {
+	color:#fff;
+}
 
 /* page heading
 ----------------------------------------------- */
@@ -782,7 +785,9 @@ h2#login-status {
     text-align: center;
     background-color: #aaa;
 }
-
+.loginbox-connected a:hover {
+	color: #fff;
+}
 
 .form_row {
 	border-bottom: 1px solid #E1E1D5;
